#fix fixed titles overflowing their div and displaying in random places

--- a/portfolio/src/main/resources/static/styles/group/groups.css
+++ b/portfolio/src/main/resources/static/styles/group/groups.css
@@ -47,6 +47,9 @@
     line-height: 5rem;
 
     cursor: pointer;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .group__name:hover {
@@ -75,7 +78,9 @@
     right: 0;
 }
 .group__long-name {
-    word-wrap: break-word;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .group__button-wrapper button{
