--- a/portfolio/src/main/resources/static/styles/project/projectDetails.css
+++ b/portfolio/src/main/resources/static/styles/project/projectDetails.css
@@ -50,7 +50,9 @@ html {
     font-weight: 400;
     margin: 0 0 1rem 0;
     width: calc(100% - 15rem);
-    word-wrap: break-word;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 #project__date {
@@ -138,6 +140,9 @@ html {
     padding: 0;
     height: 5rem;
     line-height: 5rem;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .sprint__button-wrapper, .event__button-wrapper, .deadline__button-wrapper, .milestone__button-wrapper {
